<resources>
    <string name="app_name">elimu.ai Content Provider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">elimu.ai Content Provider</string>
    <string name="nav_header_subtitle">&lt;BuildConfig.BASE_URL&gt;</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_letters">Letters</string>
    <string name="menu_letter_sounds">Letter-Sounds</string>
    <string name="menu_sounds">Sounds</string>
    <string name="menu_words">Words</string>
    <string name="menu_numbers">Numbers</string>
    <string name="menu_emojis">Emojis</string>
    <string name="menu_images">Images</string>
    <string name="menu_storybooks">Storybooks</string>
    <string name="menu_videos">Videos</string>
    <string name="words_size">words.size(): %d</string>
    <string name="videos_size">videos.size(): %d</string>
    <string name="storybooks_size">storyBooks.size(): %d</string>
    <string name="sounds_size">sounds.size(): %d</string>
    <string name="numbers_size">numbers.size(): %d</string>
    <string name="lettersounds_size">letterSounds.size(): %d</string>
    <string name="letters_size">letters.size(): %d</string>
    <string name="images_size">images.size(): %d</string>
    <string name="emojis_size">emojis.size(): %d</string>
    <string name="language_value">%1$s (%2$s)</string>
    <string name="drawer_header_multimedia">Multimedia</string>
    <string name="select_your_language">Select your language</string>
</resources>
