<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ai.elimu.content_provider.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_allophones"
        android:name="ai.elimu.content_provider.ui.allophone.AllophonesFragment"
        android:label="@string/menu_allophones"
        tools:layout="@layout/fragment_allophones" />

    <fragment
        android:id="@+id/nav_letters"
        android:name="ai.elimu.content_provider.ui.letter.LettersFragment"
        android:label="@string/menu_letters"
        tools:layout="@layout/fragment_letters" />

    <fragment
        android:id="@+id/nav_words"
        android:name="ai.elimu.content_provider.ui.word.WordsFragment"
        android:label="@string/menu_words"
        tools:layout="@layout/fragment_words" />

    <fragment
        android:id="@+id/nav_numbers"
        android:name="ai.elimu.content_provider.ui.number.NumbersFragment"
        android:label="@string/menu_numbers"
        tools:layout="@layout/fragment_numbers" />

    <fragment
        android:id="@+id/nav_emojis"
        android:name="ai.elimu.content_provider.ui.emoji.EmojisFragment"
        android:label="@string/menu_emojis"
        tools:layout="@layout/fragment_emojis" />

    <fragment
        android:id="@+id/nav_storybooks"
        android:name="ai.elimu.content_provider.ui.storybook.StoryBooksFragment"
        android:label="@string/menu_storybooks"
        tools:layout="@layout/fragment_storybooks" />
</navigation>
